Feat:vitals added in call

--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -1,19 +1,56 @@
-<nb-card>
+<div class="container-fluid d-flex align-item-start flex-column meet">
+<nb-card >
     <nb-card-body>
         <nb-actions size="medium" class="justify-content-center">
-            <nb-action icon="monitor-outline" nbTooltip="Share-desktop" nbTooltipPlacement="top"></nb-action>
-            <nb-action >
-                <nb-icon icon="language" nbTooltip="Translator" nbTooltipPlacement="top" pack="font-awesome">
+            <nb-action (click)="this.showTable = !this.showTable">
+                <nb-icon icon="stethoscope" nbTooltip="Vitals" nbTooltipPlacement="top" pack="font-awesome">
                 </nb-icon>
             </nb-action >
+            <nb-action icon="monitor-outline" nbTooltip="Share-desktop" nbTooltipPlacement="top"></nb-action>
+            <nb-action>
+                <nb-icon icon="language" nbTooltip="Translator" nbTooltipPlacement="top" pack="font-awesome">
+                </nb-icon>
+            </nb-action>
             <nb-action icon="volume-off-outline"  nbTooltip="Mute" nbTooltipPlacement="top" ></nb-action>
             <nb-action icon="video-outline" nbTooltip="Video" nbTooltipPlacement="top"  ></nb-action>
             <nb-action > 
-                <button nbButton status="success" class="w-100" size="small">Invite</button>
+                <button nbButton status="success" class="w-100" size="small"><nb-icon icon="person-add-outline"></nb-icon>Invite</button>
             </nb-action>
             <nb-action >
-                <button nbButton status="danger" class="w-100" size="small">Leave</button>
+                <button nbButton status="danger" class="w-100" size="small"><nb-icon icon="phone-slash" pack="font-awesome"></nb-icon>Leave</button>
             </nb-action>
           </nb-actions>
     </nb-card-body>
 </nb-card>
+<nb-card accent="danger" *ngIf="showTable"  class="mt-auto"> 
+    <nb-card-body>
+        <ngx-datatable class="material" [rows]="vitals" [columnMode]="ColumnMode.force" [scrollbarV]="true" [headerHeight]="50" [rowHeight]="50" [loadingIndicator]="isLoading" [scrollbarV]="true" style="height: 200px;">
+            <ngx-datatable-column name="BP" prop="BP" headerClass="ps-4 text-center" cellClass="ps-4 text-center" >
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span>{{value || '-'}}</span>
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="SPO2" prop="SPO2" headerClass="text-center" cellClass="text-center">
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span>{{value || '-'}}</span>
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Weight" prop="Weight" headerClass="text-center" cellClass="text-center" >
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span>{{value || '-'}}</span>
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Temp" prop="Temp" headerClass="text-center" cellClass="text-center">
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span>{{value || '-'}}</span>
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Glucose" prop="Glucose" headerClass="text-center" cellClass="text-center">
+                <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span>{{value || '-'}}</span>
+                </ng-template>
+            </ngx-datatable-column>
+        </ngx-datatable>
+    </nb-card-body>
+</nb-card>
+</div>
