--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -100,7 +100,10 @@
                         <nb-icon icon="headphones-outline"></nb-icon>{{'kAudio' | translate}}
                     </button>
                     <button nbButton status="success" class="m-1" size="small" (click)="callBridge()">
-                        <nb-icon icon="phone-call-outline"></nb-icon><a routerLink="../../meet"> {{'kCAllBridge' | translate}}</a>
+                        <nb-icon icon="phone-call-outline"></nb-icon>{{'kCAllBridge' | translate}}
+                    </button>
+                    <button nbButton status="success" class="m-1" size="small">
+                        <nb-icon icon="video-outline"></nb-icon><a class="text-decoration-none text-reset" [routerLink]="['../../meet/',patientID]">Video Beta</a>
                     </button>
                 </div>
             </ng-template>
