--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -14,10 +14,10 @@
             <nb-action icon="volume-off-outline"  nbTooltip="Mute" nbTooltipPlacement="top" ></nb-action>
             <nb-action icon="video-outline" nbTooltip="Video" nbTooltipPlacement="top"  ></nb-action>
             <nb-action > 
-                <button nbButton status="success" class="w-100" size="small"><nb-icon icon="person-add-outline"></nb-icon>Invite</button>
+                <button nbButton status="success" class="w-100" size="small"><nb-icon icon="person-add-outline" class="text-white"></nb-icon>Invite</button>
             </nb-action>
             <nb-action >
-                <button nbButton status="danger" class="w-100" size="small"><nb-icon icon="phone-slash" pack="font-awesome"></nb-icon>Leave</button>
+                <button nbButton status="danger" class="w-100" size="small"><nb-icon icon="phone-slash" class="text-white" pack="font-awesome"></nb-icon>Leave</button>
             </nb-action>
           </nb-actions>
     </nb-card-body>
