--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -63,9 +63,12 @@
                     <p class="mb-0">{{item.value || '---'}}</p>
                 </div>
             </div>
+            <div class="d-inline-flex row px-5" *ngIf="vitalsOriginal.length === 0">
+                <div class="col-md-12 border-right">
+                    <p class="mb-0">No Data Found</p>
+                </div>
+            </div>
         </nb-card-body>
     </nb-card>
     <!-- <nb-card> -->
-
-
 </div>
