Fix: chat issue

--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -13,6 +13,7 @@
                 </nb-action>
                 <nb-action icon="volume-off-outline" nbTooltip="Mute" nbTooltipPlacement="top"></nb-action>
                 <nb-action icon="video-outline" nbTooltip="Video" nbTooltipPlacement="top"></nb-action>
+                <nb-action icon="message-circle-outline" nbTooltip="Chat" nbTooltipPlacement="top" (click)="openWindow()"></nb-action>
                 <nb-action>
                     <button nbButton status="success" class="w-100" size="small">
                         <nb-icon icon="person-add-outline" class="text-white"></nb-icon>Invite
