fix: call bridge error and assessment

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -113,7 +113,7 @@
                 </button>
                 <button nbButton (click)="surveydialog()" status="warning" class="mb-2 w-100 justify-content-start"
                     size="small">
-                    <nb-icon icon="clock-outline"></nb-icon>{{'Survey' | translate}}
+                    <nb-icon icon="clock-outline"></nb-icon>{{'Assessment' | translate}}
                 </button>
             </div>
             <ng-template #templateRef>
