--- a/src/app/shared/components/send-assessment/send-assessment.component.html
+++ b/src/app/shared/components/send-assessment/send-assessment.component.html
@@ -1,6 +1,6 @@
 <nb-card class="patient-list mb-0 card-width" [nbSpinner]="isLoading">
     <nb-card-header>
-        <h6 class="float-start">{{'kAssessment' | translate}}</h6>
+        <h6 class="float-start">{{'kAssessments' | translate}}</h6>
     </nb-card-header>
     <nb-list-item>
         <div class="nb-form-field-addon nb-form-field-prefix-medium nb-form-field-addon-success">
