--- a/src/app/shared/components/add/add.component.html
+++ b/src/app/shared/components/add/add.component.html
@@ -351,7 +351,7 @@
                         <app-alerts-list [patientID]="patientID"></app-alerts-list>
                     </nb-card-body>
                 </nb-tab>
-                <nb-tab tabTitle="{{'kAssessment' | translate}}">
+                <nb-tab tabTitle="{{'kAssessments' | translate}}">
                     <nb-card-body>
                         <!-- <app-devices ></app-devices> -->
                         <app-surveys (surveyData)="getSurvey($event)" [dataSurvey]="surveys"></app-surveys>
